Adding base content

--- a/index.html
+++ b/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>C.J. O'Leary's Portfolio</title>
-</head>
-<body>
-    <p>test</p>
-    <p>test 2</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Helvetica+neue;400;500;600;700&display=swap" rel="stylesheet">
+        <title>C.J. O'Leary's Portfolio</title>
+    </head>
+
+    <body>
+        <header class="main-header">
+            <div>
+                <h1 class="name">C.J. O'Leary</h1>
+                <nav class="main-nav">
+                    <ul class="nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav> 
+
+                <img src="images/responsive-layout-profile.png" alt="Picture of C.J. O'Leary" class="profile-image">
+                <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all of my skills to use!</p>
+            </div>
+        </header>
+        <main>
+            <section>
+                <h2>Portfolio</h2>
+                <img src="images/portfolio-1.png" alt="Image of a Marketing Page">
+                    <h3>Marketing Page</h3>
+                    <p>This project shows the front page of a marketing website meant for a business I'm interested in.</p>
+                <img src="images/portfolio-2.png" alt="Image of a Search Page">
+                    <h3>Search Page</h3>
+                    <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                <img src="images/portfolio-3.png" alt="Image of a Travel App">
+                    <h3>Travel App</h3>
+                    <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                <img src="images/portfolio-4.png" alt="Image of a Map">
+                    <h3>Map of Favorite Spots</h3>
+                    <p>This project uses mapping apis to plot points of my favorite spot in the city for a do it yourself walking tour.</p>
+                <img src="images/portfolio-5.png" alt="Image of a Photo Gallery">
+                    <h3>Photo Gallery</h3>
+                    <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                <img src="images/portfolio-6.png" alt="Image of a Calculator">
+                    <h3>Calculator</h3>
+                    <p>Someone can enter in the numbers if they want, and press the big blue button to get the result.</p>
+            </section>
+        </main>
+    </body>
+
+    <footer>
+        <h2>Contact</h2>
+            <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+            <p>Phone <strong> +1 &lpar;111&rpar; 555-1234</strong></p>
+            <p>Email <strong>email&commat;yoursite.com</strong></p>
+        <uL>
+            <li><a href="index.html">C.J. O'Leary</a></li>
+            <li><a href="#">Back to Top</a></li>
+        </uL>
+    </footer>
 </html>
