--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
             <div>
                 <h1 class="name">C.J. O'Leary</h1>
                 <nav class="main-nav">
-                    <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+                        <a href="index.html">Home</a>
+                        <a href="#">Portfolio</a>
+                        <a href="#">Contact</a>
                 </nav> 
 
                 <img src="images/responsive-layout-profile.png" alt="Picture of C.J. O'Leary" class="profile-image">
