Formatting for tablets and desktops

--- a/index.html
+++ b/index.html
@@ -18,34 +18,56 @@
                         <a href="#portfolio"><strong>Portfolio</strong></a>
                         <a href="#footer"><strong>Contact</strong></a>
                 </nav> 
+            </div>
 
+            <div class="header clearfix">
                 <img src="images/responsive-layout-profile.png" alt="Picture of C.J. O'Leary" class="profile-image">
                 <p class="intro">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all of my skills to use!</p>
             </div>
+        
         </header>
         <main>
             <section id="portfolio" class="portfolio">
                 <h2>Portfolio</h2>
-                <div class="main-content">
-                    <img src="images/portfolio-1.png" alt="Image of a Marketing Page">
-                        <h3>Marketing Page</h3>
-                        <p>This project shows the front page of a marketing website meant for a business I'm interested in.</p>
-                    <img src="images/portfolio-2.png" alt="Image of a Search Page">
-                        <h3>Search Page</h3>
-                        <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-                    <img src="images/portfolio-3.png" alt="Image of a Travel App">
-                        <h3>Travel App</h3>
-                        <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-                    <img src="images/portfolio-4.png" alt="Image of a Map">
-                        <h3>Map of Favorite Spots</h3>
-                        <p>This project uses mapping apis to plot points of my favorite spot in the city for a do it yourself walking tour.</p>
-                    <img src="images/portfolio-5.png" alt="Image of a Photo Gallery">
-                        <h3>Photo Gallery</h3>
-                        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-                    <img src="images/portfolio-6.png" alt="Image of a Calculator">
-                        <h3>Calculator</h3>
-                        <p>Someone can enter in the numbers if they want, and press the big blue button to get the result.</p>
-                </div>
+                <div class="main-content clearfix">
+                    
+                    <div class="port-1 col">
+                        <img src="images/portfolio-1.png" alt="Image of a Marketing Page">
+                            <h3>Marketing Page</h3>
+                            <p>This project shows the front page of a marketing website meant for a business I'm interested in.</p>
+                    </div>
+
+                    <div class="port-2 col">
+                        <img src="images/portfolio-2.png" alt="Image of a Search Page">
+                            <h3>Search Page</h3>
+                            <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                    </div>
+
+                    <div class="port-3 col">
+                        <img src="images/portfolio-3.png" alt="Image of a Travel App">
+                            <h3>Travel App</h3>
+                            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                    </div class="port-3">
+
+                    <div class="port-4 col">
+                        <img src="images/portfolio-4.png" alt="Image of a Map">
+                            <h3>Map of Favorite Spots</h3>
+                            <p>This project uses mapping apis to plot points of my favorite spot in the city for a do it yourself walking tour.</p>
+                    </div>
+
+                    <div class="port-5 col"> 
+                        <img src="images/portfolio-5.png" alt="Image of a Photo Gallery">
+                            <h3>Photo Gallery</h3>
+                            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                    </div>
+
+                    <div class="port-6 col">
+                        <img src="images/portfolio-6.png" alt="Image of a Calculator">
+                            <h3>Calculator</h3>
+                            <p>Someone can enter in the numbers if they want, and press the big blue button to get the result.</p>
+                    </div>
+
+               </div>  <!-- main content -->
             </section>
         </main>
     </body>
@@ -58,9 +80,12 @@
             <p>Email <strong>email&commat;yoursite.com</strong></p>
         </div>
         <div class="footer-nav clearfix">
-            <p><strong>C.J. O'Leary</strong></p>
-            <nav>
-                <a href="#"><strong>Back to Top</strong></a>
+            <p class="footer-name"><strong>C.J. O'Leary</strong></p>
+            <a href="#" class="back-to-top"><strong>Back to Top</strong></a>
+            <nav class="footer-menu">
+                    <a href="index.html"><strong>Home</strong></a>
+                    <a href="#portfolio"><strong>Portfolio</strong></a>
+                    <a href="#footer"><strong>Contact</strong></a>
             </nav>
         </div>
     </footer>
