Styling and new page section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
     <body>
         <header>
-            <div class="main-header">
+            <div class="main-header clearfix">
                 <h1 class="name">C.J. O'Leary</h1>
                 <nav class="main-nav">
                         <a href="index.html"><strong>Home</strong></a>
                         <a href="#portfolio"><strong>Portfolio</strong></a>
+                        <a href="#skills"><strong>Skills</strong></a>
                         <a href="#footer"><strong>Contact</strong></a>
                 </nav> 
             </div>
@@ -69,6 +70,11 @@
 
                </div>  <!-- main content -->
             </section>
+
+            <section id="skills" class="skills">
+                <h2>Skills</h2>
+                <img src="images/skills.png" alt="Image of HTML5, CSS, JavaScript">
+            </section>
         </main>
     </body>
 
@@ -85,6 +91,7 @@
             <nav class="footer-menu">
                     <a href="index.html"><strong>Home</strong></a>
                     <a href="#portfolio"><strong>Portfolio</strong></a>
+                    <a href="#skills"><strong>Skills</strong></a>
                     <a href="#footer"><strong>Contact</strong></a>
             </nav>
         </div>
