changed skills section width

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <img src="images/portfolio-3.png" alt="Image of a Travel App">
                             <h3>Travel App</h3>
                             <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-                    </div class="port-3">
+                    </div>
 
                     <div class="port-4 col">
                         <img src="images/portfolio-4.png" alt="Image of a Map">
@@ -85,6 +85,7 @@
             <p>Phone <strong> +1 &lpar;111&rpar; 555-1234</strong></p>
             <p>Email <strong>email&commat;yoursite.com</strong></p>
         </div>
+        
         <div class="footer-nav clearfix">
             <p class="footer-name"><strong>C.J. O'Leary</strong></p>
             <a href="#" class="back-to-top"><strong>Back to Top</strong></a>
